--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #24262e;
+}
+
+.nav {
+  background-color: #1d1e26;
+  padding: 2em 2em;
+  display: flex;
+  align-items: center;
+  color: white;
+  font-family: "Inter", sans-serif;
+}
+
+.nav-logo {
+  width: 6rem;
+  margin: -1em;
+}
+
+.nav-logo-text {
+  margin-right: auto;
+  color: #61dbfb;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.main-content-container {
+  padding: 4em 2em;
+  font-family: "Inter", sans-serif;
+  color: white;
+}
+
+.main-content-header {
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+.main-content-list {
+  font-size: 1rem;
+  margin: 2em 3.5em;
+}
+
+.main-content-list li {
+  padding-block: 1em;
+  max-width: 25em;
+}
+
+.main-content-list li::marker {
+  font-size: 1.4rem;
+  color: #61dbfb;
 }
